# flake8-check-action

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: push.yml
src/flake8_check_action/: __main__.py  formatter.py  github.py
test/: bad_file.py  test_main.py
