[metadata]
name = flake8-check-action
version = attr: flake8_check_action.__version__
license = MIT
license_file = LICENSE
description = 'Configurably use GitHub Actions to run flake8 as a Check',
long_description = file: README.md
homepage = 'https://www.github.com/tonybajan/flake8-check-action'
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Quality Assurance

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
flake8.report =
    github-check-formatter = flake8_check_action.formatter:GitHubCheckFormatter

[bdist_wheel]
universal = 1
